# stm32-cmake

./: .gitignore  CMakeLists.txt  TemplateVS.code-workspace.template
src/: main.c
